...
        case .nextButton: return "nextButton"
        case .rewButton: return "rewButton"
        case .ffwdButton: return "ffwdButton"
        case .muteButton: return "muteButton"
        case .repeatButton: return "repeatButton"
        case .returnButton: return "returnButton"
        case .shuffleButton: return "shuffleButton"
        case .playlist: return "playlist"
        case .dropdownPlaylist: return "dropdownPlaylist"
        case .video: return "video"
        case .wmpVideo: return "wmpVideo"
        case .effects: return "effects"
        case .equalizerSettings: return "equalizerSettings"
...
